hphp/test/quick/vgets.php.expectf
Fatal error: Only variables can be used as references in %s/vgets.php on line 26
